Arreglando ubicaciones del showcase y contenedor carrito

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container-fluid ">
           <div class="row">
              <div class="col-xl-12">
-                 <img src="./img/Showcase.png" id="showcase" alt="">
-                 <img src="./img/carrito (1).png" id="carrito" alt="">
+                 <img src="./img/Showcase.png" id="showcase" alt="" draggable="false">
+                 <img src="./img/carrito (1).png" id="carrito" alt="" draggable="false">
                  
               </div>
 
@@ -137,10 +137,10 @@
                   </div>
                   <div class="col">
                     <div class="p-4  Snack" draggable="true">
-                        <img src="./img/snack.png" id="snack1" class='compra  snack' alt="">
-                        <img src="./img/snack.png" id="snack2" class='compra  snack' alt="">
-                        <img src="./img/snack.png" id="snack3" class='compra  snack' alt="">
-                        <img src="./img/snack.png" id="snack4" class='compra  snack' alt="">
+                        <img src="./img/snack.png" id="snack1" class='compra snack' alt="">
+                        <img src="./img/snack.png" id="snack2" class='compra snack' alt="">
+                        <img src="./img/snack.png" id="snack3" class='compra snack' alt="">
+                        <img src="./img/snack.png" id="snack4" class='compra snack' alt="">
                     </div>
                   </div>
                   <div class="col">
@@ -151,19 +151,19 @@
                     <img src="./img/tomato.png" id="tomato4" class='compra tomato' alt="">
                     <img src="./img/tomato.png" id="tomato5" class='compra tomato' alt="">
                     </div>
-                    <img src="./img/caja de madera (1).png"  id="cajaM1" alt="">
+                    <img src="./img/caja de madera (1).png"  id="cajaM1" alt="" draggable="false">
                   </div>
 
 
                   <div class="col">
                     <div class="p-4 Lechuga" draggable="true">
-                        <img src="./img/lechuga.png" id="lechuga1" class='compra  lechuga'  alt="">
-                        <img src="./img/lechuga.png" id="lechuga2" class='compra  lechuga'  alt="">
-                        <img src="./img/lechuga.png" id="lechuga3" class='compra  lechuga'  alt="">
-                        <img src="./img/lechuga.png" id="lechuga4" class='compra  lechuga'  alt="">
-                        <img src="./img/lechuga.png" id="lechuga5" class='compra  lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga1" class='compra lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga2" class='compra lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga3" class='compra lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga4" class='compra lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga5" class='compra lechuga'  alt="">
                     </div>
-                    <img src="./img/caja de madera (1).png" id="cajaM2" alt="">
+                    <img src="./img/caja de madera (1).png" id="cajaM2" alt=""draggable="false" >
                   </div>
 
 
@@ -178,7 +178,7 @@
                      <img src=".//img/eggplant.png" id="berenjena6" class='compra berenjena' alt="">
                      <img src=".//img/eggplant.png" id="berenjena7" class='compra berenjena' alt="">
                     </div>
-                    <img src="./img/caja de madera (1).png" id="cajaM3" alt="">
+                    <img src="./img/caja de madera (1).png" id="cajaM3" alt="" draggable="false">
                   </div>
 
                   <div class="col">
@@ -190,7 +190,7 @@
                     <img src="./img/platano (1).png" id="platano5" class='compra platano' alt="">
 
                     </div>
-                    <img src="./img/caja de madera (1).png" id="cajaM4" alt="">
+                    <img src="./img/caja de madera (1).png" id="cajaM4" alt="" draggable="false">
                   </div>
               </div>
 
@@ -200,7 +200,7 @@
               </div>
 
               <div class="container-sm" id="sumaDePrecios">
-                <p id='total'>€</p>
+                <p id='total'></p>
 
               </div>
 
