--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/img/logoCabezera.png" />
+    <title>ShowCase</title>
 </head>
 <body>
     <div class="container-fluid ">
@@ -15,16 +16,12 @@
                  <img src="./img/Showcase.png" id="showcase" alt="" draggable="false">
                  <img src="./img/carrito (1).png" id="carrito" alt="" draggable="false">
                  
-
                  
               </div>
-
-
 
               <div class="container-md" ondragstart="drag(event)" ondrop="drop(event)" ondragover="allowDrop(event)">
                   <h1 id="Titulo">C.R.Q.M MARKET</h1>
 
-                  <!-- <input type="reset" value="reset" id="reset" onclick="funcion_reiniciar();"> -->
                   <button type="reset" value="reset" id="reset" onclick="funcion_reiniciar();"> Cancelar Compra </button>
                 <div class="row row-cols-4 row-cols-lg-4 g-4 g-lg-4">
                   <div class="col" >
