fixing the link of the background and the images of jam

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                   </div>
                   <div class="col" draggable="true">
                     <div class="p-4 Mermelada">
-                        <img src="/img/mermelada.png" id="mermelada1" class='compra mermelada' alt="">
-                        <img src="/img/mermelada.png" id="mermelada2" class='compra mermelada' alt="">
-                        <img src="/img/mermelada.png" id="mermelada3" class='compra mermelada' alt="">
-                        <img src="/img/mermelada.png" id="mermelada4" class='compra mermelada' alt="">
-                        <img src="/img/mermelada.png" id="mermelada5" class='compra mermelada' alt="">
+                        <img src="./img/mermelada.png" id="mermelada1" class='compra mermelada' alt="">
+                        <img src="./img/mermelada.png" id="mermelada2" class='compra mermelada' alt="">
+                        <img src="./img/mermelada.png" id="mermelada3" class='compra mermelada' alt="">
+                        <img src="./img/mermelada.png" id="mermelada4" class='compra mermelada' alt="">
+                        <img src="./img/mermelada.png" id="mermelada5" class='compra mermelada' alt="">
                     </div>
                   </div>
                   <div class="col" draggable="true">
